Burning Ship & Histogram Design Changes